--- a/assets/styles.css
+++ b/assets/styles.css
@@ -34,7 +34,7 @@
     }
 
     .profiel-text {
-        border: 3px solid #333;
+      border: 3px solid #333;  
         font-size: 20px;
         margin: 0;
         padding: 10px;}
@@ -42,7 +42,9 @@
     .index-text {
       font-size: 20px;
       margin: 10px 50px 0 50px;
-      text-align: center}
+      padding: 10px;
+      text-align: center;
+      border: 3px solid #333;}
                                                                            /* Einde letters stylign */
 
                                                                 /* Basis styling */
