--- a/assets/styles.css
+++ b/assets/styles.css
@@ -30,7 +30,7 @@
         display: grid;
         column-template: column;
         gap: 0;
-        margin: 15px auto;
+        margin: auto;
     }
 
     .profiel-text {
