--- a/assets/styles.css
+++ b/assets/styles.css
@@ -74,6 +74,9 @@
       margin: 25px 0px 0px 10px;
       border: solid 3px #333}
     
+    .gefaald {
+      background-color: red;}
+
     .bezig {
       background-color: yellow;}
 
